# CodeReason

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  config.py  db.py  errors.py  main.py
apps/api/app/ai/: __init__.py  policy.py  prompts.py  provider.py  redaction.py  schemas.py
apps/api/app/api/: dependencies.py
apps/api/app/deterministic/: __init__.py  ast_analysis.py  comparison.py  docker_sandbox.py  execution.py  harness.py  types.py
apps/api/app/grading/: __init__.py  consistency.py  export.py
apps/api/app/models/: __init__.py  domain.py  enums.py
apps/api/app/schemas/: __init__.py  domain.py
apps/api/app/services/: __init__.py  ai_orchestrator.py  contracts.py  demo_seed.py  evidence_policy.py  execution_orchestrator.py  grading_operations.py  grading_policy.py  read_models.py  review_priority.py  staleness.py
apps/api/app/worker/: __init__.py  __main__.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260714_0001_initial_schema.py
apps/api/tests/: conftest.py  factories.py  test_assignments_api.py  test_audit_preserving_deletes.py  test_evidence_contract.py  test_execution_orchestrator.py  test_migration_snapshot.py  test_orchestration_api.py  test_phase1_route_invariants.py  test_review_lifecycle.py  test_rubric_policy.py
apps/api/tests/ai/: test_policy.py  test_prompts.py  test_redaction.py  test_transmission_manifest.py
apps/api/tests/deterministic/: conftest.py  (+6 more)
(+70 files in other folders)
