[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codereason-api"
version = "0.1.0"
description = "Evidence-first grading API for CodeReason"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "openai>=2.0,<3",
  "pydantic>=2.9,<3",
  "python-multipart>=0.0.12,<1",
  "sqlalchemy>=2.0.35,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
]
postgres = ["psycopg[binary]>=3.2,<4"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
